# rna_maps

./: .gitignore  README.md  combine_rnamaps.py  environment.yml  pyproject.toml  rna_maps.py  rna_maps_scoreInc.py  rna_maps_vastdb_only.py  run_ptb.sh
.github/workflows/: python-package-conda.yml
TestVersion/: main.py
TestVersion/test/: chr21_PTBP1_2_Gueroussov2015_SE.MATS.JCEC.txt  run_ppig.sh  run_ptb.sh  run_small_mv_test.sh  run_small_test.sh
TestVersion/utils/: analysis.py  data.py  visualize.py
rnamaps/: __init__.py  __main__.py  cli.py  config.py  coverage.py  io_rmats.py  io_vastdb.py  logging_utils.py  multivalency.py  permutation.py  pipeline.py  plot_helpers.py  plots.py  preprocessing.py
test/: GRCh38.release34.primary_assembly.genome.fa.fai  GRCh38_ensembl2gencode.txt  chr21_PTBP1_2_Gueroussov2015_SE.MATS.JCEC_negstrand.txt  chr21_PTBP1_2_Gueroussov2015_SE.MATS.JCEC_posstrand.txt  run_ptb.sh  run_ptb_rnamaps_test_for_CAMP.sh  run_small_test.sh
test/expected_results/: chr21_PTBP1_2_Gueroussov2015_SE.MATS.JCEC_final_3ss.tsv  chr21_PTBP1_2_Gueroussov2015_SE.MATS.JCEC_final_3ss_downstream.tsv  chr21_PTBP1_2_Gueroussov2015_SE.MATS.JCEC_final_3ss_upstream.tsv  chr21_PTBP1_2_Gueroussov2015_SE.MATS.JCEC_final_5ss.tsv  chr21_PTBP1_2_Gueroussov2015_SE.MATS.JCEC_final_5ss_downstream.tsv  chr21_PTBP1_2_Gueroussov2015_SE.MATS.JCEC_final_5ss_upstream.tsv  chr21_PTBP1_2_Gueroussov2015_SE.MATS.JCEC_fisher_3ss.tsv  chr21_PTBP1_2_Gueroussov2015_SE.MATS.JCEC_fisher_5ss.tsv  chr21_PTBP1_2_Gueroussov2015_SE.MATS.JCEC_labeled.tsv  (+1 more)
tests/: test_permutation.py
(+4 files in other folders)
